refactor: replace Tablesaw with custom Table framework, rename query model classes
- Remove Tablesaw dependency; introduce custom Table, Schema, Row, Aggregators, SortSpec, ColumnResolver
- Rename model classes: CountColumn→SelectedCount, SelectColumn→SelectedColumn, etc. with StructuralField
- Adapt QueryModelBuilder, QuerySemanticValidator, all executors, QueryCLI, and RocksDBBrowser
- Remove TableResultService in favor of ResultMaterializer
- Update all query-related tests